// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> ref should work 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  color: #282828;
  -webkit-transition: color 150ms ease-in;
  transition: color 150ms ease-in;
}

.c1:hover {
  color: #00478A;
}

.c1:focus-within {
  color: #00478A;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px dotted;
  border-color: transparent;
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  overflow: hidden;
  -webkit-transition: borderColor 120ms ease-in;
  transition: borderColor 120ms ease-in;
}

.c5:focus-within {
  border-color: rgba(0,0,0,0.8);
}

.c9 {
  position: absolute;
  top: 0;
  left: -99px;
  width: 0;
  height: 0;
  border: 0;
  margin: 0;
  padding: 0;
}

.c9~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: none;
}

.c9:checked~*[data-render-icon='true'] *[data-icon-normal='true'] {
  display: none;
}

.c9:checked~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: initial;
  color: #00478A;
}

.c9:disabled~*[data-render-icon='true'] *[data-icon-checked='true'] {
  color: #A6A6A6;
}

.c9:disabled~*[data-render-icon='true'] *[data-icon-normal='true'] {
  color: #A6A6A6;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.5rem;
  height: 1.5rem;
  width: 1.5rem;
}

.c16 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: pointer;
  min-height: 1.5rem;
  padding-left: 1.5rem;
}

.c20 {
  padding-left: 8px;
}

<div
  class="poodle-box c0 poodle-check-control c1 poodle-checkbox c2 c2"
>
  <div
    class="poodle-box c0 poodle-check-control__control c5 poodle-checkbox__control c2 c2"
  >
    <input
      class="poodle-box c0 poodle-check-control__input c9 c2"
      id="poodle-check-control-1"
      type="checkbox"
    />
    <div
      aria-hidden="true"
      class="poodle-box c0 poodle-check-control__icon c12 poodle-checkbox__icon c2 c2"
      data-render-icon="true"
    >
      <svg
        data-icon-checked="true"
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          clip-rule="evenodd"
          d="M4 2a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H4zm16.182 1.818H3.818v16.364h16.364V3.818z"
          fill-rule="evenodd"
        />
        <path
          d="M7.227 12.591a.75.75 0 1 0-1.06 1.06l3.712 3.713 7.955-7.955a.75.75 0 0 0-1.06-1.06l-6.895 6.894-2.652-2.652z"
        />
      </svg>
      <svg
        data-icon-normal="true"
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          clip-rule="evenodd"
          d="M4 2a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H4zm16.182 1.818H3.818v16.364h16.364V3.818z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <label
    class="poodle-box c0 poodle-check-control__label c16 poodle-checkbox__label c2 c2"
    for="poodle-check-control-1"
  >
    <span
      class="poodle-box c0 poodle-check-control__label-text c20 poodle-checkbox__label c2 c2"
    >
      Hello world
    </span>
  </label>
</div>
`;

exports[`<Checkbox /> should render Box props correctly 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  color: #282828;
  -webkit-transition: color 150ms ease-in;
  transition: color 150ms ease-in;
}

.c1:hover {
  color: #00478A;
}

.c1:focus-within {
  color: #00478A;
}

.c3 {
  margin-top: 20px;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px dotted;
  border-color: transparent;
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  overflow: hidden;
  -webkit-transition: borderColor 120ms ease-in;
  transition: borderColor 120ms ease-in;
}

.c5:focus-within {
  border-color: rgba(0,0,0,0.8);
}

.c9 {
  position: absolute;
  top: 0;
  left: -99px;
  width: 0;
  height: 0;
  border: 0;
  margin: 0;
  padding: 0;
}

.c9~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: none;
}

.c9:checked~*[data-render-icon='true'] *[data-icon-normal='true'] {
  display: none;
}

.c9:checked~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: initial;
  color: #00478A;
}

.c9:disabled~*[data-render-icon='true'] *[data-icon-checked='true'] {
  color: #A6A6A6;
}

.c9:disabled~*[data-render-icon='true'] *[data-icon-normal='true'] {
  color: #A6A6A6;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.5rem;
  height: 1.5rem;
  width: 1.5rem;
}

.c16 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: pointer;
  min-height: 1.5rem;
  padding-left: 1.5rem;
}

.c20 {
  padding-left: 8px;
}

<div
  class="poodle-box c0 poodle-check-control c1 poodle-checkbox c2 c3"
  id="id"
>
  <div
    class="poodle-box c0 poodle-check-control__control c5 poodle-checkbox__control c2 c2"
  >
    <input
      class="poodle-box c0 poodle-check-control__input c9 c2"
      id="poodle-check-control-1"
      type="checkbox"
    />
    <div
      aria-hidden="true"
      class="poodle-box c0 poodle-check-control__icon c12 poodle-checkbox__icon c2 c2"
      data-render-icon="true"
    >
      <svg
        data-icon-checked="true"
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          clip-rule="evenodd"
          d="M4 2a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H4zm16.182 1.818H3.818v16.364h16.364V3.818z"
          fill-rule="evenodd"
        />
        <path
          d="M7.227 12.591a.75.75 0 1 0-1.06 1.06l3.712 3.713 7.955-7.955a.75.75 0 0 0-1.06-1.06l-6.895 6.894-2.652-2.652z"
        />
      </svg>
      <svg
        data-icon-normal="true"
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          clip-rule="evenodd"
          d="M4 2a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H4zm16.182 1.818H3.818v16.364h16.364V3.818z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <label
    class="poodle-box c0 poodle-check-control__label c16 poodle-checkbox__label c2 c2"
    for="poodle-check-control-1"
  >
    <span
      class="poodle-box c0 poodle-check-control__label-text c20 poodle-checkbox__label c2 c2"
    >
      Hello world
    </span>
  </label>
</div>
`;

exports[`<Checkbox /> should render Checkbox correctly 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  color: #282828;
  -webkit-transition: color 150ms ease-in;
  transition: color 150ms ease-in;
}

.c1:hover {
  color: #00478A;
}

.c1:focus-within {
  color: #00478A;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px dotted;
  border-color: transparent;
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  overflow: hidden;
  -webkit-transition: borderColor 120ms ease-in;
  transition: borderColor 120ms ease-in;
}

.c5:focus-within {
  border-color: rgba(0,0,0,0.8);
}

.c9 {
  position: absolute;
  top: 0;
  left: -99px;
  width: 0;
  height: 0;
  border: 0;
  margin: 0;
  padding: 0;
}

.c9~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: none;
}

.c9:checked~*[data-render-icon='true'] *[data-icon-normal='true'] {
  display: none;
}

.c9:checked~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: initial;
  color: #00478A;
}

.c9:disabled~*[data-render-icon='true'] *[data-icon-checked='true'] {
  color: #A6A6A6;
}

.c9:disabled~*[data-render-icon='true'] *[data-icon-normal='true'] {
  color: #A6A6A6;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.5rem;
  height: 1.5rem;
  width: 1.5rem;
}

.c16 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: pointer;
  min-height: 1.5rem;
  padding-left: 1.5rem;
}

.c20 {
  padding-left: 8px;
}

<div
  class="poodle-box c0 poodle-check-control c1 poodle-checkbox c2 c2"
>
  <div
    class="poodle-box c0 poodle-check-control__control c5 poodle-checkbox__control c2 c2"
  >
    <input
      class="poodle-box c0 poodle-check-control__input c9 c2"
      id="poodle-check-control-1"
      type="checkbox"
    />
    <div
      aria-hidden="true"
      class="poodle-box c0 poodle-check-control__icon c12 poodle-checkbox__icon c2 c2"
      data-render-icon="true"
    >
      <svg
        data-icon-checked="true"
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          clip-rule="evenodd"
          d="M4 2a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H4zm16.182 1.818H3.818v16.364h16.364V3.818z"
          fill-rule="evenodd"
        />
        <path
          d="M7.227 12.591a.75.75 0 1 0-1.06 1.06l3.712 3.713 7.955-7.955a.75.75 0 0 0-1.06-1.06l-6.895 6.894-2.652-2.652z"
        />
      </svg>
      <svg
        data-icon-normal="true"
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          clip-rule="evenodd"
          d="M4 2a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H4zm16.182 1.818H3.818v16.364h16.364V3.818z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <label
    class="poodle-box c0 poodle-check-control__label c16 poodle-checkbox__label c2 c2"
    for="poodle-check-control-1"
  >
    <span
      class="poodle-box c0 poodle-check-control__label-text c20 poodle-checkbox__label c2 c2"
    >
      Hello world
    </span>
  </label>
</div>
`;

exports[`<Checkbox /> should render indeterminate checkbox correctly 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  color: #282828;
  -webkit-transition: color 150ms ease-in;
  transition: color 150ms ease-in;
}

.c1:hover {
  color: #00478A;
}

.c1:focus-within {
  color: #00478A;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px dotted;
  border-color: transparent;
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  overflow: hidden;
  -webkit-transition: borderColor 120ms ease-in;
  transition: borderColor 120ms ease-in;
}

.c5:focus-within {
  border-color: rgba(0,0,0,0.8);
}

.c9 {
  position: absolute;
  top: 0;
  left: -99px;
  width: 0;
  height: 0;
  border: 0;
  margin: 0;
  padding: 0;
}

.c9~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: none;
}

.c9:checked~*[data-render-icon='true'] *[data-icon-normal='true'] {
  display: none;
}

.c9:checked~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: initial;
  color: #00478A;
}

.c9:disabled~*[data-render-icon='true'] *[data-icon-checked='true'] {
  color: #A6A6A6;
}

.c9:disabled~*[data-render-icon='true'] *[data-icon-normal='true'] {
  color: #A6A6A6;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.5rem;
  height: 1.5rem;
  width: 1.5rem;
}

.c16 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: pointer;
  min-height: 1.5rem;
  padding-left: 1.5rem;
}

.c20 {
  padding-left: 8px;
}

<div
  class="poodle-box c0 poodle-check-control c1 poodle-checkbox c2 c2"
>
  <div
    class="poodle-box c0 poodle-check-control__control c5 poodle-checkbox__control c2 c2"
  >
    <input
      class="poodle-box c0 poodle-check-control__input c9 c2"
      id="poodle-check-control-1"
      type="checkbox"
    />
    <div
      aria-hidden="true"
      class="poodle-box c0 poodle-check-control__icon c12 poodle-checkbox__icon c2 c2"
      data-render-icon="true"
    >
      <svg
        data-icon-checked="true"
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          clip-rule="evenodd"
          d="M2 4a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2v16a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V4zm1.818-.182h16.364v16.364H3.818V3.818zM7 11a1 1 0 1 0 0 2h10a1 1 0 1 0 0-2H7z"
          fill-rule="evenodd"
        />
      </svg>
      <svg
        data-icon-normal="true"
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          clip-rule="evenodd"
          d="M4 2a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H4zm16.182 1.818H3.818v16.364h16.364V3.818z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <label
    class="poodle-box c0 poodle-check-control__label c16 poodle-checkbox__label c2 c2"
    for="poodle-check-control-1"
  >
    <span
      class="poodle-box c0 poodle-check-control__label-text c20 poodle-checkbox__label c2 c2"
    >
      Hello world
    </span>
  </label>
</div>
`;

exports[`<Checkbox /> theming should disable classes 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  color: #282828;
  -webkit-transition: color 150ms ease-in;
  transition: color 150ms ease-in;
}

.c1:hover {
  color: #00478A;
}

.c1:focus-within {
  color: #00478A;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px dotted;
  border-color: transparent;
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  overflow: hidden;
  -webkit-transition: borderColor 120ms ease-in;
  transition: borderColor 120ms ease-in;
}

.c4:focus-within {
  border-color: rgba(0,0,0,0.8);
}

.c8 {
  position: absolute;
  top: 0;
  left: -99px;
  width: 0;
  height: 0;
  border: 0;
  margin: 0;
  padding: 0;
}

.c8~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: none;
}

.c8:checked~*[data-render-icon='true'] *[data-icon-normal='true'] {
  display: none;
}

.c8:checked~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: initial;
  color: #00478A;
}

.c8:disabled~*[data-render-icon='true'] *[data-icon-checked='true'] {
  color: #A6A6A6;
}

.c8:disabled~*[data-render-icon='true'] *[data-icon-normal='true'] {
  color: #A6A6A6;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.5rem;
  height: 1.5rem;
  width: 1.5rem;
}

.c15 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: pointer;
  min-height: 1.5rem;
  padding-left: 1.5rem;
}

.c19 {
  padding-left: 8px;
}

<div
  class="poodle-box c0 poodle-check-control c1 poodle-checkbox c2"
>
  <div
    class="poodle-box c0 poodle-check-control__control c4 poodle-checkbox__control c2 c2"
  >
    <input
      class="poodle-box c0 poodle-check-control__input c8 c2"
      id="poodle-check-control-1"
      type="checkbox"
    />
    <div
      aria-hidden="true"
      class="poodle-box c0 poodle-check-control__icon c11 poodle-checkbox__icon c2 c2"
      data-render-icon="true"
    >
      <svg
        data-icon-checked="true"
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          clip-rule="evenodd"
          d="M4 2a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H4zm16.182 1.818H3.818v16.364h16.364V3.818z"
          fill-rule="evenodd"
        />
        <path
          d="M7.227 12.591a.75.75 0 1 0-1.06 1.06l3.712 3.713 7.955-7.955a.75.75 0 0 0-1.06-1.06l-6.895 6.894-2.652-2.652z"
        />
      </svg>
      <svg
        data-icon-normal="true"
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          clip-rule="evenodd"
          d="M4 2a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H4zm16.182 1.818H3.818v16.364h16.364V3.818z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <label
    class="poodle-box c0 poodle-check-control__label c15 poodle-checkbox__label c2 c2"
    for="poodle-check-control-1"
  >
    <span
      class="poodle-box c0 poodle-check-control__label-text c19 poodle-checkbox__label c2 c2"
    >
      Hello
    </span>
  </label>
</div>
`;

exports[`<Checkbox /> theming should extend styles in global 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  color: #282828;
  -webkit-transition: color 150ms ease-in;
  transition: color 150ms ease-in;
}

.c1:hover {
  color: #00478A;
}

.c1:focus-within {
  color: #00478A;
}

.c2 {
  margin-top: 10px;
  letter-spacing: 250px;
  top: 0;
  text-indent: 1px;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px dotted;
  border-color: transparent;
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  overflow: hidden;
  -webkit-transition: borderColor 120ms ease-in;
  transition: borderColor 120ms ease-in;
}

.c5:focus-within {
  border-color: rgba(0,0,0,0.8);
}

.c9 {
  position: absolute;
  top: 0;
  left: -99px;
  width: 0;
  height: 0;
  border: 0;
  margin: 0;
  padding: 0;
}

.c9~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: none;
}

.c9:checked~*[data-render-icon='true'] *[data-icon-normal='true'] {
  display: none;
}

.c9:checked~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: initial;
  color: #00478A;
}

.c9:disabled~*[data-render-icon='true'] *[data-icon-checked='true'] {
  color: #A6A6A6;
}

.c9:disabled~*[data-render-icon='true'] *[data-icon-normal='true'] {
  color: #A6A6A6;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.5rem;
  height: 1.5rem;
  width: 1.5rem;
}

.c16 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: pointer;
  min-height: 1.5rem;
  padding-left: 1.5rem;
}

.c20 {
  padding-left: 8px;
}

<div
  class="poodle-box c0 poodle-check-control c1 poodle-checkbox c2 c3"
>
  <div
    class="poodle-box c0 poodle-check-control__control c5 poodle-checkbox__control c3 c3"
  >
    <input
      class="poodle-box c0 poodle-check-control__input c9 c3"
      id="poodle-check-control-1"
      type="checkbox"
    />
    <div
      aria-hidden="true"
      class="poodle-box c0 poodle-check-control__icon c12 poodle-checkbox__icon c3 c3"
      data-render-icon="true"
    >
      <svg
        data-icon-checked="true"
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          clip-rule="evenodd"
          d="M4 2a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H4zm16.182 1.818H3.818v16.364h16.364V3.818z"
          fill-rule="evenodd"
        />
        <path
          d="M7.227 12.591a.75.75 0 1 0-1.06 1.06l3.712 3.713 7.955-7.955a.75.75 0 0 0-1.06-1.06l-6.895 6.894-2.652-2.652z"
        />
      </svg>
      <svg
        data-icon-normal="true"
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          clip-rule="evenodd"
          d="M4 2a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H4zm16.182 1.818H3.818v16.364h16.364V3.818z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <label
    class="poodle-box c0 poodle-check-control__label c16 poodle-checkbox__label c3 c3"
    for="poodle-check-control-1"
  >
    <span
      class="poodle-box c0 poodle-check-control__label-text c20 poodle-checkbox__label c3 c3"
    >
      hello
    </span>
  </label>
</div>
`;

exports[`<Checkbox /> theming should extend styles in local 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  color: #282828;
  -webkit-transition: color 150ms ease-in;
  transition: color 150ms ease-in;
}

.c1:hover {
  color: #00478A;
}

.c1:focus-within {
  color: #00478A;
}

.c2 {
  margin-top: 10px;
  letter-spacing: 250px;
  top: 0;
  text-indent: 1px;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px dotted;
  border-color: transparent;
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  overflow: hidden;
  -webkit-transition: borderColor 120ms ease-in;
  transition: borderColor 120ms ease-in;
}

.c5:focus-within {
  border-color: rgba(0,0,0,0.8);
}

.c9 {
  position: absolute;
  top: 0;
  left: -99px;
  width: 0;
  height: 0;
  border: 0;
  margin: 0;
  padding: 0;
}

.c9~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: none;
}

.c9:checked~*[data-render-icon='true'] *[data-icon-normal='true'] {
  display: none;
}

.c9:checked~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: initial;
  color: #00478A;
}

.c9:disabled~*[data-render-icon='true'] *[data-icon-checked='true'] {
  color: #A6A6A6;
}

.c9:disabled~*[data-render-icon='true'] *[data-icon-normal='true'] {
  color: #A6A6A6;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.5rem;
  height: 1.5rem;
  width: 1.5rem;
}

.c16 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: pointer;
  min-height: 1.5rem;
  padding-left: 1.5rem;
}

.c20 {
  padding-left: 8px;
}

<div
  class="poodle-box c0 poodle-check-control c1 poodle-checkbox c2 c3"
>
  <div
    class="poodle-box c0 poodle-check-control__control c5 poodle-checkbox__control c3 c3"
  >
    <input
      class="poodle-box c0 poodle-check-control__input c9 c3"
      id="poodle-check-control-1"
      type="checkbox"
    />
    <div
      aria-hidden="true"
      class="poodle-box c0 poodle-check-control__icon c12 poodle-checkbox__icon c3 c3"
      data-render-icon="true"
    >
      <svg
        data-icon-checked="true"
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          clip-rule="evenodd"
          d="M4 2a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H4zm16.182 1.818H3.818v16.364h16.364V3.818z"
          fill-rule="evenodd"
        />
        <path
          d="M7.227 12.591a.75.75 0 1 0-1.06 1.06l3.712 3.713 7.955-7.955a.75.75 0 0 0-1.06-1.06l-6.895 6.894-2.652-2.652z"
        />
      </svg>
      <svg
        data-icon-normal="true"
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          clip-rule="evenodd"
          d="M4 2a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H4zm16.182 1.818H3.818v16.364h16.364V3.818z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <label
    class="poodle-box c0 poodle-check-control__label c16 poodle-checkbox__label c3 c3"
    for="poodle-check-control-1"
  >
    <span
      class="poodle-box c0 poodle-check-control__label-text c20 poodle-checkbox__label c3 c3"
    >
      Hello
    </span>
  </label>
</div>
`;

exports[`<Checkbox /> theming should override classes 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  color: #282828;
  -webkit-transition: color 150ms ease-in;
  transition: color 150ms ease-in;
}

.c1:hover {
  color: #00478A;
}

.c1:focus-within {
  color: #00478A;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px dotted;
  border-color: transparent;
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  overflow: hidden;
  -webkit-transition: borderColor 120ms ease-in;
  transition: borderColor 120ms ease-in;
}

.c4:focus-within {
  border-color: rgba(0,0,0,0.8);
}

.c8 {
  position: absolute;
  top: 0;
  left: -99px;
  width: 0;
  height: 0;
  border: 0;
  margin: 0;
  padding: 0;
}

.c8~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: none;
}

.c8:checked~*[data-render-icon='true'] *[data-icon-normal='true'] {
  display: none;
}

.c8:checked~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: initial;
  color: #00478A;
}

.c8:disabled~*[data-render-icon='true'] *[data-icon-checked='true'] {
  color: #A6A6A6;
}

.c8:disabled~*[data-render-icon='true'] *[data-icon-normal='true'] {
  color: #A6A6A6;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.5rem;
  height: 1.5rem;
  width: 1.5rem;
}

.c15 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: pointer;
  min-height: 1.5rem;
  padding-left: 1.5rem;
}

.c19 {
  padding-left: 8px;
}

<div
  class="poodle-box c0 poodle-check-control c1 poodle-checkbox morning c2"
>
  <div
    class="poodle-box c0 poodle-check-control__control c4 poodle-checkbox__control c2 c2"
  >
    <input
      class="poodle-box c0 poodle-check-control__input c8 c2"
      id="poodle-check-control-1"
      type="checkbox"
    />
    <div
      aria-hidden="true"
      class="poodle-box c0 poodle-check-control__icon c11 poodle-checkbox__icon c2 c2"
      data-render-icon="true"
    >
      <svg
        data-icon-checked="true"
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          clip-rule="evenodd"
          d="M4 2a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H4zm16.182 1.818H3.818v16.364h16.364V3.818z"
          fill-rule="evenodd"
        />
        <path
          d="M7.227 12.591a.75.75 0 1 0-1.06 1.06l3.712 3.713 7.955-7.955a.75.75 0 0 0-1.06-1.06l-6.895 6.894-2.652-2.652z"
        />
      </svg>
      <svg
        data-icon-normal="true"
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          clip-rule="evenodd"
          d="M4 2a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H4zm16.182 1.818H3.818v16.364h16.364V3.818z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <label
    class="poodle-box c0 poodle-check-control__label c15 poodle-checkbox__label c2 c2"
    for="poodle-check-control-1"
  >
    <span
      class="poodle-box c0 poodle-check-control__label-text c19 poodle-checkbox__label c2 c2"
    >
      Hello
    </span>
  </label>
</div>
`;

exports[`<Checkbox /> theming should override styles 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  color: #282828;
  -webkit-transition: color 150ms ease-in;
  transition: color 150ms ease-in;
}

.c1:hover {
  color: #00478A;
}

.c1:focus-within {
  color: #00478A;
}

.c2 {
  margin-top: 50px;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px dotted;
  border-color: transparent;
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  overflow: hidden;
  -webkit-transition: borderColor 120ms ease-in;
  transition: borderColor 120ms ease-in;
}

.c5:focus-within {
  border-color: rgba(0,0,0,0.8);
}

.c9 {
  position: absolute;
  top: 0;
  left: -99px;
  width: 0;
  height: 0;
  border: 0;
  margin: 0;
  padding: 0;
}

.c9~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: none;
}

.c9:checked~*[data-render-icon='true'] *[data-icon-normal='true'] {
  display: none;
}

.c9:checked~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: initial;
  color: #00478A;
}

.c9:disabled~*[data-render-icon='true'] *[data-icon-checked='true'] {
  color: #A6A6A6;
}

.c9:disabled~*[data-render-icon='true'] *[data-icon-normal='true'] {
  color: #A6A6A6;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.5rem;
  height: 1.5rem;
  width: 1.5rem;
}

.c16 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: pointer;
  min-height: 1.5rem;
  padding-left: 1.5rem;
}

.c20 {
  padding-left: 8px;
}

<div
  class="poodle-box c0 poodle-check-control c1 poodle-checkbox c2 c3"
>
  <div
    class="poodle-box c0 poodle-check-control__control c5 poodle-checkbox__control c3 c3"
  >
    <input
      class="poodle-box c0 poodle-check-control__input c9 c3"
      id="poodle-check-control-1"
      type="checkbox"
    />
    <div
      aria-hidden="true"
      class="poodle-box c0 poodle-check-control__icon c12 poodle-checkbox__icon c3 c3"
      data-render-icon="true"
    >
      <svg
        data-icon-checked="true"
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          clip-rule="evenodd"
          d="M4 2a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H4zm16.182 1.818H3.818v16.364h16.364V3.818z"
          fill-rule="evenodd"
        />
        <path
          d="M7.227 12.591a.75.75 0 1 0-1.06 1.06l3.712 3.713 7.955-7.955a.75.75 0 0 0-1.06-1.06l-6.895 6.894-2.652-2.652z"
        />
      </svg>
      <svg
        data-icon-normal="true"
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          clip-rule="evenodd"
          d="M4 2a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H4zm16.182 1.818H3.818v16.364h16.364V3.818z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <label
    class="poodle-box c0 poodle-check-control__label c16 poodle-checkbox__label c3 c3"
    for="poodle-check-control-1"
  >
    <span
      class="poodle-box c0 poodle-check-control__label-text c20 poodle-checkbox__label c3 c3"
    >
      Hello
    </span>
  </label>
</div>
`;

exports[`<Checkbox /> theming should render with default props correctly 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  color: #282828;
  -webkit-transition: color 150ms ease-in;
  transition: color 150ms ease-in;
}

.c1:hover {
  color: #00478A;
}

.c1:focus-within {
  color: #00478A;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px dotted;
  border-color: transparent;
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  overflow: hidden;
  -webkit-transition: borderColor 120ms ease-in;
  transition: borderColor 120ms ease-in;
}

.c5:focus-within {
  border-color: rgba(0,0,0,0.8);
}

.c9 {
  position: absolute;
  top: 0;
  left: -99px;
  width: 0;
  height: 0;
  border: 0;
  margin: 0;
  padding: 0;
}

.c9~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: none;
}

.c9:checked~*[data-render-icon='true'] *[data-icon-normal='true'] {
  display: none;
}

.c9:checked~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: initial;
  color: #00478A;
}

.c9:disabled~*[data-render-icon='true'] *[data-icon-checked='true'] {
  color: #A6A6A6;
}

.c9:disabled~*[data-render-icon='true'] *[data-icon-normal='true'] {
  color: #A6A6A6;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.5rem;
  height: 1.5rem;
  width: 1.5rem;
}

.c16 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: pointer;
  min-height: 1.5rem;
  padding-left: 1.5rem;
}

.c20 {
  padding-left: 8px;
}

<div
  class="poodle-box c0 poodle-check-control c1 poodle-checkbox c2 hello c2"
  id="id"
>
  <div
    class="poodle-box c0 poodle-check-control__control c5 poodle-checkbox__control c2 c2"
  >
    <input
      class="poodle-box c0 poodle-check-control__input c9 c2"
      id="poodle-check-control-1"
      type="checkbox"
    />
    <div
      aria-hidden="true"
      class="poodle-box c0 poodle-check-control__icon c12 poodle-checkbox__icon c2 c2"
      data-render-icon="true"
    >
      <svg
        data-icon-checked="true"
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          clip-rule="evenodd"
          d="M4 2a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H4zm16.182 1.818H3.818v16.364h16.364V3.818z"
          fill-rule="evenodd"
        />
        <path
          d="M7.227 12.591a.75.75 0 1 0-1.06 1.06l3.712 3.713 7.955-7.955a.75.75 0 0 0-1.06-1.06l-6.895 6.894-2.652-2.652z"
        />
      </svg>
      <svg
        data-icon-normal="true"
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          clip-rule="evenodd"
          d="M4 2a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H4zm16.182 1.818H3.818v16.364h16.364V3.818z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <label
    class="poodle-box c0 poodle-check-control__label c16 poodle-checkbox__label c2 c2"
    for="poodle-check-control-1"
  >
    <span
      class="poodle-box c0 poodle-check-control__label-text c20 poodle-checkbox__label c2 c2"
    >
      Hello
    </span>
  </label>
</div>
`;
